🐛 fix IE11 bugs and styles (#724)
closes https://github.com/TryGhost/Ghost/issues/8384

- fixes image uploads on settings/general by reverting to jQuery for triggering the file dialog because IE11 doesn't support `MouseEvent` events or have the `.closest` method on native DOM elements
- gives all SVG elements an explicit `width` and `height` - if one property is set to `auto` or not specified IE11 will treat it as 100% of the container
- fixes horizontal scroll + scrollbar on the main app viewport

--- a/ghost/admin/app/styles/components/modals.css
+++ b/ghost/admin/app/styles/components/modals.css
@@ -89,14 +89,14 @@
     margin: 0;
     padding: 0;
     width: 16px;
-    height: auto;
+    height: 16px;
     border: none;
 }
 
 .modal-content .close svg {
     fill: #808284;
     width: 16px;
-    height: auto;
+    height: 16px;
 }
 
 .modal-content .close svg:hover {
