--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -97,7 +97,7 @@
 
 .settings-menu-header.subview .back svg {
     height: 14px;
-    width: auto;
+    width: 14px;
 }
 
 .settings-menu-header.subview .back svg path {
