--- a/ghost/admin/app/styles/layouts/auth.css
+++ b/ghost/admin/app/styles/layouts/auth.css
@@ -38,9 +38,9 @@
     border-radius: 0;
 }
 .forgotten-link span {
-    height: 24px;
+    height: 20px;
     font-size: 1.1rem;
-    line-height: 24px;
+    line-height: 20px;
     padding: 0 11px 0 12px;
 }
 
